# anime-aggressors

./: .gitignore  CMakeLists.txt  DEPLOY.md  README.md  build.sh  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  pages.yml  quality.yml  release.yml
apps/console/: README.md
apps/desktop/: PRODUCT_SCOPE.md  README.md  package.json
apps/mobile/: PRODUCT_SCOPE.md  README.md  package.json
apps/web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
assets/: README.md  manifest.json
assets/blender/: README.md
assets/exports/: README.md
docs/: AAA_PRODUCTION_WORKFLOW.md  ANIMATION_CHOREOGRAPHY_PIPELINE.md  ANIME_AGGRESSORS_GAP_ANALYSIS.md  ARCHITECTURE.md  ASSET_PIPELINE.md  AUDIT_ACTION_PLAN.md  BACKLOG.md  BALANCE_VERTICAL_SLICE.md  BLENDER_TO_GODOT_CHARACTER_PIPELINE.md  BLENDER_TO_GODOT_PIPELINE.md  BUG_SEVERITY_RUBRIC.md  BUILD_TARGETS.md  CODEX_CONTINUATION_AUDIT.md  CONSOLE_PLATFORM_FIGHTER_UX_SPEC.md  CONTROLS.md  CORE_GAMEPLAY_IMPLEMENTATION_STATUS.md  CPP_ENGINE_PLAN.md  DEPLOYMENT.md  DESIGN_ACCESSIBILITY_AND_DEPTH.md  EDGE_IO_PROTOCOL.md  ENGINE_ARCHITECTURE.md  ENGINE_DECISION_RECORD.md  ENGINE_MIGRATION_DECISION.md  ENGINE_RESET_DECISION.md  ENGINE_STRATEGY.md  FIGHTER_ASSET_PIPELINE.md  FIGHTER_MODEL_RIG_ANIMATION_PIPELINE_STUDY.md  FULL_GAME_ACCEPTANCE_CRITERIA.md  FULL_SCOPE_IMPLEMENTATION_AUDIT.md  FULL_SCOPE_IMPLEMENTATION_REPORT.md  FULL_SCOPE_PLAYTEST_CHECKLIST.md  FULL_SCOPE_PRODUCTION_PLAN.md  GAMEPLAY_MARKET_RESEARCH_PLATFORM_FIGHTERS.md  GAME_START_FLOW_MARKET_RESEARCH.md  GENRE_GAP_ANALYSIS.md  GITHUB_PAGES_DEPLOYMENT.md  GODOT_ANIME_FIGHTER_PRODUCTION_PIPELINE.md  GODOT_EDITOR_PLAYTEST_SIGNOFF.md  GODOT_EXPORT_GUIDE.md  GODOT_MANUAL_QA.md  (+81 more)
game-godot/: FROZEN.md  README.md  export_icon.png.import  export_presets.cfg  icon.png.import  icon.svg.import  project.godot
native/engine/: CMakeLists.txt
native/engine/include/aa/: simulation.hpp
native/engine/src/: simulation.cpp
native/engine/tests/: determinism_test.cpp
playtest-evidence/: README.md
scripts/: aa-verify-project.mjs  assert-godot-export.mjs  check-godot-runtime.mjs  check-unity-editor-integrity.mjs  check-unity-filesystem.mjs  detect-unity-setup.mjs  export-godot-android.mjs  export-godot-web-pages.mjs  export-godot-web.mjs  finalize-pages-artifact.mjs  generate-godot-full-scope-data.mjs  generate-move-catalog.mjs  generate-stages-and-fighter-docs.mjs  godot-export-shared.mjs  godot-product-validation-shared.mjs  install-godot-ci.sh  install-godot-templates.sh  mobile-check.mjs  package-itch.mjs  test-android-device.mjs  validate-character-assets.mjs  validate-derby-contract.mjs  validate-fighter-animation-contract.mjs  validate-fighter-combos.mjs  validate-fighter-movesets.mjs  validate-full-scope-production.mjs  validate-game-godot-primary.mjs  validate-godot-animation-choreography.mjs  validate-godot-cache-busting.mjs  validate-godot-fighter-quality.mjs  validate-godot-product-complete.mjs  validate-godot-product-quality.mjs  validate-godot-production-rig.mjs  validate-godot-vfx-sockets.mjs  validate-stage-contract.mjs  validate-unity-environment-rescue.mjs  validate-unity-launch-experience.mjs  validate-unity-spike.mjs  verify-public-godot-build.mjs
tmp/: aa-verify-project-report.json
web/: index.html  sw.ts
(+950 files in other folders)
